--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,8 @@
     
     <string name="service_started">Example Service started</string>
     <string name="service_label">Example Service Label</string>
+    
+    <string name="action_menu_settings">Settings</string>
+    <string name="action_menu_about">About</string>
 
 </resources>
