--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -3,6 +3,7 @@
   ~ /********************************************************************************
   ~  * 
   ~  * Copyright (C) 2013 Zatta
+  ~  * German Translations done by IcedEarth
   ~  * 
   ~  * This file is part of pilight for android.
   ~  * 
