--- a/pilightTesting/src/main/res/values/strings.xml
+++ b/pilightTesting/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     
     <!-- Titles -->
     <string name="title_settings">Settings</string>
+    <string name="title_disconnect">Disconnect</string>
     <string name="title_list_base">DeviceList</string> 
     <string name="title_about">About</string>
     <string name="title_status_dialog">Status</string>
